--- a/src/pages/V4PM_Submit.page
+++ b/src/pages/V4PM_Submit.page
@@ -1,23 +1,13 @@
 <apex:page showHeader="true" sidebar="true" controller="V4PM_Controller">
-	<apex:form>
 	<apex:pageBlock title="Volunteer Event Wizard">
+	<apex:form>
 		<apex:pageBlockSection title="{!ticketableEvent.Name}">
 		<apex:pageBlockTable title="{!ticketableEvent.Name}" value="{!eventInstances}" var="ei">
-			<apex:column headerValue="Build">
-				<apex:inputCheckbox/>
-			</apex:column>
 			<apex:column value="{!ei.eventInstance.Name}"/>
 			<apex:column value="{!ei.eventInstance.PatronTicket__Venue__c}"/>
-			<apex:column headerValue="Campaign">
-				<apex:selectList multiselect="false" size="1" id="list" value="{!ei.campaign}">
-					<apex:selectOptions value="{!ei.options}"/>
-				</apex:selectList>
-			</apex:column>
+			<apex:column headerValue="Campaign" value="{!ei.campaign}"/>
 		</apex:pageBlockTable>
 		</apex:pageBlockSection>
-		<apex:pageBlockButtons location="bottom">
-		<apex:commandButton value="Build" action="{!submit}"/>
-		</apex:pageBlockButtons>
-	</apex:pageBlock>
 	</apex:form>
+	</apex:pageBlock>
 </apex:page>
