--- a/src/pages/V4PM_Start.page
+++ b/src/pages/V4PM_Start.page
@@ -1,9 +1,10 @@
-<apex:page showHeader="true" sidebar="true" controller="V4PM_Controller">
+<apex:page showHeader="true" sidebar="true" standardController="PatronTicket__TicketableEvent__c" recordSetVar="tes">
 	<apex:pageBlock>
 		<apex:pageBlockTable value="{!tes}" var="te">
-         	<apex:column>
+         	<apex:column headerValue="Ticketable Event">
               <apex:outputLink value="{!URLFOR($Page.V4PM_EventWizard,'',[id=te.Id])}">{!te.Name}</apex:outputLink>
          	</apex:column>
+         	<apex:column value="{!te.PatronTicket__Active__c}"/>
 		</apex:pageBlockTable>
 	</apex:pageBlock>
 </apex:page>
